Fixed no empty image div on mobile view when post contain no image

--- a/src/components/NewsList/NewsCard/NewsCard.module.scss
+++ b/src/components/NewsList/NewsCard/NewsCard.module.scss
@@ -121,6 +121,15 @@
     padding: 1rem;
   }
 
+  .cardNoImage {
+    grid-template-areas:
+      'header'
+      'text'
+      'footer';
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+  }
+
   .mediaColumn {
     width: 100%;
     justify-content: center;
@@ -131,6 +140,6 @@
   }
 
   .textColumn {
-    max-height: 5rem;
+    max-height: 8rem;
   }
 }
